--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tlv-rs"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 authors = ["Frostie314159"]
 license = "MIT OR Apache-2.0"
@@ -9,7 +9,8 @@ readme = "README.md"
 repository = "https://github.com/Frostie314159/tlv-rs"
 
 [dependencies]
-bin-utils = "0.1.0"
+bin-utils = "0.2.1"
+try_take = "0.1.0"
 
 [features]
 read = []
