--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tlv-rs"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["Frostie314159"]
 license = "MIT OR Apache-2.0"
@@ -9,18 +9,23 @@ readme = "README.md"
 repository = "https://github.com/Frostie314159/tlv-rs"
 
 [dependencies]
-bin-utils = "0.2.1"
-try_take = "0.1.0"
-
-[features]
-read = []
-write = []
-debug = []
-default = ["read", "write", "debug"]
+heapless = "0.7.16"
+no-panic = "0.1.26"
+scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "no-unsafe", version = "0.11.0", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
+cfg-if = "1.0.0"
 criterion = { version = "0.5.1", features = ["html_reports"] }
+macro-bits = "0.1.4"
+
+[features]
+alloc = []
+no_panic = []
 
 [[bench]]
 name = "tlv_rs"
 harness = false
+
+[[example]]
+name = "no_panic"
+required_features = ["no_panic"]
