--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose --test 
+      run: cargo test --verbose 
     - name: Test no_panic
       run: cargo run --verbose --example no_panic --features no_panic --release
