--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tlv-rs"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 authors = ["Frostie314159"]
 license = "MIT OR Apache-2.0"
@@ -11,7 +11,7 @@ repository = "https://github.com/Frostie314159/tlv-rs"
 [dependencies]
 heapless = "0.7.16"
 no-panic = "0.1.26"
-scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "no-unsafe", version = "0.11.0", default-features = false, features = ["derive"] }
+scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "no-unsafe", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
 cfg-if = "1.0.0"
