--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/Frostie314159/tlv-rs"
 [dependencies]
 heapless = "0.7.16"
 no-panic = "0.1.26"
-scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "fixed-array-impl", default-features = false }
+scroll = { version = "0.12.0", default-features = false }
 
 [dev-dependencies]
 cfg-if = "1.0.0"
